update ecommerce project card

--- a/style.css
+++ b/style.css
@@ -648,7 +648,7 @@ section {
 }
 
 #projects-card_3 {
-  background: url(assets/travel-app-screenshot.png);
+  background: url(assets/the-shop.png);
   background-size: 100% auto;
   background-repeat: no-repeat;
   grid-area: 3;
