update project card style

--- a/style.css
+++ b/style.css
@@ -580,7 +580,7 @@ section {
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
-  align-items: center;
+  /* align-items: center; */
   transition: all 300ms ease;
 }
 
@@ -613,6 +613,7 @@ section {
   justify-content: center;
   background: rgba(0,0,0,.5);
   backdrop-filter: blur(10px);
+  border-radius: 0 0 8px 8px;
 }
 
 .projects-card_back svg {
